@@ -21,18 +21,18 @@
         <!-- PROJECT-->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <skipTests>true</skipTests>
-        <surefire.version>2.20.1</surefire.version>
-        <maven-shade-plugin.version>3.2.1</maven-shade-plugin.version>
+        <surefire.version>2.22.2</surefire.version>
+        <maven-shade-plugin.version>3.2.4</maven-shade-plugin.version>
 
         <!-- LIBRARIES -->
-        <junit.version>4.13.1</junit.version>
-        <org.hamcrest.version>1.3</org.hamcrest.version>
-        <io.rest-assured.version>3.3.0</io.rest-assured.version>
-        <jug.version>3.1.5</jug.version>
+        <junit.version>4.13.2</junit.version>
+        <org.hamcrest.version>2.2</org.hamcrest.version>
+        <io.rest-assured.version>5.1.1</io.rest-assured.version>
+        <jug.version>4.0.1</jug.version>
 
         <!-- BACKENDS -->
-        <arlas.version>19.7.6</arlas.version>
-        <kafka.version>2.1.1</kafka.version>
+        <arlas.version>21.0.0</arlas.version>
+        <kafka.version>3.2.0</kafka.version>
     </properties>
 
     <dependencies>
@@ -64,19 +64,20 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.7.0</version>
+                <version>3.10.1</version>
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
+                    <release>17</release>
+                    <source>17</source>
+                    <target>17</target>
                 </configuration>
             </plugin>
 
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-failsafe-plugin</artifactId>
-                <version>2.20.1</version>
+                <version>2.22.2</version>
                 <configuration>
-                    <argLine>-Xmx2048m -XX:MaxPermSize=1024m</argLine>
+                    <argLine>-Xmx2048m</argLine>
                     <skipITs>${skipTests}</skipITs>
                 </configuration>
                 <executions>
